make minor tweak to actually resolve jumping issue

--- a/src/pages/sub-pages/carousel/detail.scss
+++ b/src/pages/sub-pages/carousel/detail.scss
@@ -12,19 +12,3 @@
   text-align: right;
   font-weight: bold;
 }
-
-.details {
-    height: 20vh;
-}
-
-@media only screen and (max-width: 1160px) {
-    .details {
-        height: 50vh;
-    }
-}
-
-@media only screen and (max-width: 570px) {
-    .details {
-        height: 85vh;
-    }
-}
